<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_margin="@dimen/activity_horizontal_margin"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:elevation="24dp">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/dialog_title"
                tools:text="Add Item"
                android:layout_marginTop="@dimen/title_margin"
                android:layout_marginLeft="@dimen/title_margin"
                android:layout_marginRight="@dimen/title_margin"
                android:layout_marginBottom="@dimen/title_bottom_margin"
                android:textSize="@dimen/text_title_size"
                android:textColor="@color/black"/>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/title_margin"
                android:layout_marginRight="@dimen/title_margin"
                android:id="@+id/todo_item_title_layout">
                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/todo_item_title"
                    android:id="@+id/todo_item_title_text"/>

            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/title_margin"
                android:layout_marginRight="@dimen/title_margin">
                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/text_due_date"
                    android:focusable="false"
                    android:id="@+id/todo_item_due_date_text"
                    android:drawableEnd="@drawable/ic_arrow_drop_down_black_24dp"
                    android:drawableRight="@drawable/ic_arrow_drop_down_black_24dp"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/title_margin"
                android:layout_marginRight="@dimen/title_margin">
                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/todo_item_assigned_to"
                    tools:text="Akshay"
                    android:id="@+id/todo_item_assigned_to_text"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/title_margin"
                android:layout_marginRight="@dimen/title_margin"
                android:layout_marginBottom="@dimen/title_margin">
                <android.support.v7.widget.AppCompatMultiAutoCompleteTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minLines="4"
                    android:hint="@string/todo_item_desc"
                    android:id="@+id/todo_item_description_view"/>
            </android.support.design.widget.TextInputLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="8dp"
                android:layout_gravity="right">
                <android.support.v7.widget.AppCompatButton
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/button_height"
                    android:text="@string/text_cancel"
                    android:background="?android:attr/selectableItemBackground"
                    android:textColor="@color/colorAccent"
                    android:id="@+id/todo_item_cancel_button"/>
                <android.support.v4.widget.Space
                    android:layout_width="8dp"
                    android:layout_height="@dimen/button_height"/>
                <android.support.v7.widget.AppCompatButton
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/button_height"
                    android:text="@string/text_ok"
                    android:background="?android:attr/selectableItemBackground"
                    android:textColor="@color/colorAccent"
                    android:id="@+id/todo_item_ok_button"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>





</LinearLayout>